Fix admin manage movies

--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -184,3 +184,6 @@ vi:
         end_time: Thời gian kết thúc
         room: Phòng
         submit: Xác nhận
+      error_message:
+        form_err: Trong biểu mẫu có
+        error: "lỗi sau: "
