--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -88,6 +88,7 @@ vi:
     formats:
       default: "%d/%m/%Y"
       hms: "%H:%M"
+      full: "%H:%M %d/%m/%Y"
     date:
       day_names: [Chủ nhật, Thứ hai, Thứ ba, Thứ tư, Thứ năm, Thứ sáu, Thứ bảy]
   showtimes:
